Crear endpoint para editar parte
